# haystack-experimental

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE-MIT.txt  README.md  agent_test.py  e2b_agent_example.py  example.py  hall_calc_example.py  hitl_breakpoint_example.py  hitl_breakpoint_example2.py  hitl_example.py  hitl_intro_example.py  hitl_multi_agent_example.py  image_embedding_example_cohere.py  image_embedding_example_st.py  image_retrieval_example.py  licenserc.toml  pyproject.toml  test_super_components.ipynb  tox.ini
.github/ISSUE_TEMPLATE/: add_experiment.md  config.yml  move_experiment_to_core.md  remove_experiment.md
.github/utils/: docstrings_checksum.py
.github/workflows/: CI_check_api_ref.yml  api_docs.yml  docstrings_linting.yml  docusaurus_sync.yml  licensing.yml  linting.yml  pypi_release.yml  tests.yml  tests_skipper_trigger.yml  workflows_linting.yml
docs/: README.md
docs/pydoc/: supercomponent_api.yml
docs/pydoc/config/: agents_api.yml  auto_merging_retriever.yml  builders_api.yml  chat_message_stores_api.yml  converters_api.yml  data_classes_api.yml  document_stores_api.yml  embedders_api.yml  evaluation_harness_api.yml  extractors_api.yml  generators_api.yml  harness.yml  hierarchical_document_splitter.yml  image_converters_api.yml  openai_function_caller.yml  openapitool.yml  pipeline_api.yml  preprocessors_api.yml  query_api.yml  retrievers_api.yml  routers_api.yml  splitters_api.yml  summarizers_api.yml  supercomponent_api.yml  supercomponents_api.yml  tool_components_api.yml  tool_invoker.yml  tools_api.yml  writers_api.yml
docs/pydoc/config_docusaurus/: agents_api.yml  chat_message_stores_api.yml  generators_api.yml  preprocessors_api.yml  query_api.yml  retrievers_api.yml  summarizers_api.yml  supercomponents_api.yml  writers_api.yml
examples/: agent.ipynb  async_pipeline.ipynb  auto_merging_retriever.ipynb  documents2graph_pipeline.py  memory_pipeline.py  metadata_extraction_with_llm_metadata_extractor.ipynb  openapitool.ipynb  pipeline.ipynb  rag_eval_harness.ipynb  super_components.ipynb  tools_support.ipynb
examples/agent_prompts/: __init__.py  comment_tool.py  context.py  file_editor_tool.py  pr_system_prompt.py  repo_viewer_tool.py  system_prompt.py
examples/github_components/: file_editor.py  issue_commenter.py  issue_viewer.py  pr_creator.py  repo_viewer.py  repository_forker.py
examples/graph_rag/: README.MD  doc2graph.py  doc2graph_hugging_face_local.py  haystack_local_model.py  prompt.py
examples/llm_metadata_extractor/: extractor.py
examples/pipeline_breakpoints/: README.md  audio_transcription.py  hybrid_rag_pipeline.py  pipeline_with_loops.py  prod_pipeline.yml  rag_pipeline.py
examples/tracing_pipeline_runs/: README.md  compare_traces.py  custom_tracer.py  generate_traces.py  qa_rag_pipeline.yaml
haystack-experimental/: version.py
haystack_experimental/: __init__.py  version.py
haystack_experimental/chat_message_stores/: __init__.py  in_memory.py  types.py  utils.py
haystack_experimental/chat_message_stores/errors/: __init__.py  errors.py
haystack_experimental/components/: __init__.py
haystack_experimental/components/agents/: __init__.py  (+2 more)
haystack_experimental/core/: __init__.py  errors.py
haystack_experimental/dataclasses/: __init__.py  answer.py  breakpoints.py  breakpoints_holder.py  byte_stream.py  chat_message.py  chatmessage.py  image_content.py  state.py  state_utils.py  streaming_chunk.py  tool.py  types.py
haystack_experimental/evaluation/: __init__.py  eval_harness.py  pipeline_pair.py  util.py
haystack_experimental/memory/: README.md  __init__.py  example.py  mem0_store.py  mem_super_component.py  memory_retriever.py  memory_writer.py  protocol.py
haystack_experimental/memory_stores/: __init__.py  example.py
haystack_experimental/testing/: sample_components.py
haystack_experimental/tools/: __init__.py  component_schema.py  component_tool.py  from_function.py  hitl.py  human_in_the_loop.py  openapi.py  tool.py  tool_component_descriptor.py
haystack_experimental/util/: __init__.py  asynchronous.py  openapi.py  payload_extraction.py  schema_conversion.py  utils.py
haystack_experimental/utils/: __init__.py  base_serialization.py  hallucination_risk_calculator.py  jinja_chat_extension.py
notebooks/: compare_traces.py  generate_traces.py
pydoc/: README.md  agents_api.yml  chat_message_stores_api.yml  generators_api.yml  memory_store_api.yml  preprocessors_api.yml  query_api.yml  retrievers_api.yml  summarizers_api.yml  supercomponents_api.yml  writers_api.yml
pydoc/temp/: experimental_agents_api.md  experimental_generators_api.md  experimental_preprocessors_api.md  experimental_query_api.md  experimental_retrievers_api.md  experimental_summarizer_api.md  experimental_supercomponents_api.md  experimental_writers_api.md
saved_states/: answer_joiner_2025_06_05_13_36_58.json  answer_joiner_2025_06_05_16_10_38.json
test/: conftest.py  test_requirements.txt
test/chat_message_stores/: test_in_memory_chat_message_store.py  test_utils.py
test/dataclasses/: test_byte_stream.py  test_chat_message.py  test_image_content.py  test_state.py  test_state_utils.py  test_tool.py  test_tool_openapi.py
test/document_stores/: test_in_memory.py
test/evaluation/: test_pipeline_pair.py  test_util.py
test/memory_stores/: test_mem0_memory_store.py  test_memory.py
test/mocks/: openai_chat_generator.py  openai_chat_generator_example.py
test/tools/: test_component_tool.py  test_from_function.py  test_tool.py
test/tracing/: utils.py
test/util/: conftest.py  test_openapi_client.py  test_openapi_client_auth.py  test_openapi_client_complex_request_body.py  test_openapi_client_complex_request_body_mixed.py  test_openapi_client_edge_cases.py  test_openapi_client_error_handling.py  test_openapi_client_live.py  test_openapi_client_live_anthropic.py  test_openapi_client_live_cohere.py  test_openapi_client_live_openai.py  test_openapi_cohere_conversion.py  test_openapi_openai_conversion.py  test_openapi_spec.py  test_utils.py  utils.py
test/utils/: test_jinja_chat_extension.py
(+311 files in other folders)
