[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "haystack-experimental"
dynamic = ["version"]
description = "Experimental components and features for the Haystack LLM framework."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "deepset.ai", email = "info@deepset.ai" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: Freely Distributable",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "haystack-ai"
]

[project.urls]
"CI: GitHub" = "https://github.com/deepset-ai/haystack-experimental/actions"
"GitHub: issues" = "https://github.com/deepset-ai/haystack-experimental/issues"
"GitHub: repo" = "https://github.com/deepset-ai/haystack-experimental"
Homepage = "https://github.com/deepset-ai/haystack-experimental"

[tool.hatch.envs.default]
installer = "uv"
dependencies = [
  # Pre-commit hook
  "pre-commit",
  "ruff",
  "haystack-pydoc-tools",
]

[tool.hatch.envs.default.scripts]
fmt = "ruff check --fix {args}; ruff format {args}"
fmt-check = "ruff check {args} && ruff format --check {args}"
docs = "haystack-pydoc pydoc tmp_api_reference"

[tool.hatch.envs.test]
extra-dependencies = [
  "tiktoken",     # LLM-based Summarizer
  "nltk>=3.9.1",  # LLM-based Summarizer
  "mem0ai", # Mem0MemoryStore
  "amazon-bedrock-haystack",
  "google-genai-haystack",
  "cohere-haystack",
  "rich", # for hitl_breakpoint_example.py
  # Type check
  "mypy",
  "pip",
  # Test
  "pytest",
  "pytest-rerunfailures",
  "pytest-cov",
  "pytest-asyncio",
]

[tool.hatch.envs.test.scripts]
unit = 'pytest --cov-report xml:coverage.xml --cov="haystack_experimental" -m "not integration" {args:test}'
integration = 'pytest -m "integration" {args:test}'
integration-retry = 'pytest -m "integration" --reruns 3 --reruns-delay 60 -x --maxfail=5 {args:test}'
all = 'pytest {args:test}'

types = "mypy --install-types --non-interactive {args:haystack_experimental}"

[tool.hatch.version]
source = "vcs"
tag-pattern = 'v(?P<version>.*)'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["/haystack_experimental"]

[tool.hatch.build.targets.wheel]
packages = ["haystack_experimental"]

[tool.codespell]
ignore-words-list = "ans,astroid,nd,ned,nin,ue,rouge,ist"
quiet-level = 3
skip = "test/nodes/*,test/others/*,test/samples/*,e2e/*"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
markers = [
  "integration: integration tests",
]
log_cli = true
asyncio_mode = "auto"

[tool.mypy]
disallow_incomplete_defs = true
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 120
exclude = ["test", ".github", "examples"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 21

[tool.ruff.lint.pylint]
allow-magic-value-types = ["float", "int", "str"]
max-args = 12                                     # Default is 5
max-branches = 18                                 # Default is 12
max-public-methods = 20                           # Default is 20
max-returns = 6                                   # Default is 6
max-statements = 50                               # Default is 50

[tool.ruff.lint]
select = [
  "A001",   # builtin-variable-shadowing
  "A002",   # builtin-argument-shadowing
  "A003",   # builtin-attribute-shadowing
  "ARG",    # flake8-unused-arguments
  "ASYNC",  # flake8-async
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "C90",    # mccabe complexity
  "COM818", # trailing-comma-on-bare-tuple
  "D102",   # Missing docstring in public method
  "D103",   # Missing docstring in public function
  "D205",   # 1 blank line required between summary line and description
  "D209",   # Closing triple quotes go to new line
  "D213",   # summary lines must be positioned on the second physical line of the docstring
  "D417",   # undocumented-parameter
  "D419",   # undocumented-returns
  "E",      # pycodestyle errors
  "EXE",    # flake8-executable
  "F",      # pyflakes
  "G001",   # logging-format-interpolation
  "G002",   # logging-percent-format
  "G004",   # logging-f-string
  "I",      # isort
  "ISC001", # implicit-string-concatenation
  "INT",    # flake8-gettext
  "PERF",   # perflint
  "PIE",    # flake8-pie
  "PL",     # pylint
  "RET",    # flake8-return
  "RUF104", # unmatched-suppression-comment
  "S102",   # flake8-bandit (exec-builtin)
  "S307",   # flake8-bandit (eval)
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "TID252", # relative-imports
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
  "YTT",    # flake8-2020
]

ignore = [
  "B008",    # function-call-as-argument-default
  "B904",    # raise-without-from-inside-except
  "BLE001",  # blind-except
  "E402",    # module-import-not-top-level # in experimental, we often do monkey patching
  "E721",    # type-comparison
  "E722",    # bare-except
  "PERF203", # try-except-in-loop
  "PERF401", # manual-list-comprehension
  "PIE790",  # unnecessary-pass

  # we re-export symbols in __init__ for correct type checking
  # https://typing.python.org/en/latest/spec/distributing.html#import-conventions
  "PLC0414", # useless-import-alias

  "PLC0415", # import-outside-top-level
  "PLR1714", # repeated-equality-comparison
  "PLW0603", # global-statement
  "PLW1514", # unspecified-encoding
  "PLW2901", # redefined-loop-name
  "RET505",  # superfluous-else-return
  "SIM108",  # if-else-block-instead-of-ternary
  "SIM109",  # multiple-comparisons-with-in
  "SIM118",  # in-dict-keys
  "TRY002",  # raise-vanilla-class
  "TRY003",  # raise-vanilla-args
  "TRY201",  # verbose-raise
  "TRY300",  # try-consider-else
  "UP008",   # super-with-arguments
  "UP032",   # use-f-string
  "UP037",   # quoted-annotation
]
